--- a/basic/src/main/resources/application.yml
+++ b/basic/src/main/resources/application.yml
@@ -11,3 +11,22 @@ spring:
     url: jdbc:mariadb://localhost:3306/basic
     username: root
     password: 1234
+  jpa:
+    database: mysql
+    # innoDB 사용 설정
+    database-platform: org.hibernate.dialect.MariaDBDialect
+    # table create같은 ddl문 생성해줄거냐 말거냐 ??
+    # table은 생성해주지만, 스키마는 반드시 사전에 생성해야 함 ! (db)
+    generate-ddl: true
+    # hibernate : jpa가 인터페이스일 때, 그 구현체 (실질적 기능 구현)
+    hibernate:
+      # create 옵션은 매번 table을 drop 후 생성
+      # update 옵션은 변경사항만 alter를 적용하고, 기존의 데이터 유지
+      # update => 변경 사항 중 주로 추가사항을 반영하고, 삭제나 수정사항은 반영이 안되는 경우가 있음 (주의)
+      # validate는 실제 db와의 차이만 check -> 로그만 찍어줌
+      ddl-auto: update
+    # 콘솔 창에 ddl, dml문을 출력 해주까마까?
+    show_sql: true
+
+mybatis:
+  mapper-locations: classpath:/mapper/**/*.xml
