--- a/basic/src/main/resources/application.yml
+++ b/basic/src/main/resources/application.yml
@@ -6,6 +6,12 @@
 #  port: 8081
 
 spring:
+  mvc:
+    pathmatch:
+      # spring boot 2.4 이상에서는 기본적으로 PathPatternParser를 사용하고 있는데,
+      # springfox와 같은 일부 라이브러리에서는 해당 pathPattern 룰과 충돌나는 경우가 있어서
+      # path 방식 변경
+      matching-strategy: ant_path_matcher # 화이트리스트 (허용목록)로 가겠다 룰 적용
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/basic
