--- a/board/build.gradle
+++ b/board/build.gradle
@@ -1,16 +1,16 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.1'
-	id 'io.spring.dependency-management' version '1.1.5'
+	id 'org.springframework.boot' version '2.7.11'
+	// 의존성 관리 툴의 버전 명시
+	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
 group = 'com.beyond'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
+	// 자바 버전
+	sourceCompatibility = '11'
 }
 
 configurations {
