--- a/board/src/main/resources/application.yml
+++ b/board/src/main/resources/application.yml
@@ -1,13 +1,39 @@
+# starting point는 application.yml 파일임
+# 환경 분리했으니까 (prod, dev) 설정해주면 됨
 spring:
-  datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/newBoard
-    username: root
-    password: 1234
-  jpa:
-    database: mysql
-    database-platform: org.hibernate.dialect.MariaDBDialect
-    generate-ddl: true
-    hibernate:
-      ddl-auto: update
-    show_sql: true
+  profiles:
+    active: dev
+#    active: prod # 8081로 뜰거임 (prod port 8081)
+
+# 추후 jar 실행시
+# 아래와 같이 실행시 application.yml에 설정을 덮어쓰기
+#java "-Dspring.profiles.active=prod" -jar <jar파일명>
+
+
+
+
+
+# 지우기 싫어서 주석
+#spring:
+#  datasource:
+#    driver-class-name: org.mariadb.jdbc.Driver
+#    url: jdbc:mariadb://localhost:3306/newBoard
+#    username: root
+#    password: 1234
+#  jpa:
+#    database: mysql
+#    database-platform: org.hibernate.dialect.MariaDBDialect
+#    generate-ddl: true
+#    hibernate:
+#      ddl-auto: update
+#    show_sql: true
+#
+#logging:
+#  level:
+#    # 로그레벨 : trace < debug < info < error 순서의 로그레벨 가짐
+#    # info로 설정시, trace와 debug 출력 안됨
+#    root: info
+#
+## 로그파일 경로와 파일명 지정
+#  file:
+#    name: logs/app.log
