--- a/board/src/main/resources/application-dev.yml
+++ b/board/src/main/resources/application-dev.yml
@@ -6,6 +6,12 @@ spring:
     activate:
       # 이름 지정
       on-profile: dev
+  session:
+    storage-type: redis
+  # 추후에 session 용도가 아니라면 아래 redis 부분만 추가  (위 session빼고)
+  redis:
+    host: localhost
+    port: 6379
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://localhost:3306/newBoard
@@ -26,5 +32,5 @@ logging:
     root: info
 
   # 로그파일 경로와 파일명 지정
-  file:
-    name: logs/app.log
+#  file:
+#    name: logs/app.log
